# Marco-Santoni.github.io-src

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
content/: a-simple-machine-learning-pipeline_01.md  ai-augmented-coding-exam.md  ai_eng_skills_by_pages.md  applied-bayesian-inference-with-pymc-video_01.md  azure_data_scientist_associate.md  bayesian-ab-testing-in-python_01.md  biella_databricks.md  big-data-london-2025.md  book-thinking-bets.md  careers_in_data_and_ai.md  chess_vs_checkers_data_science_team.md  choosing_my_next_job_title.md  codemotion-2025.md  covid_predictions.md  data_intensive_application_book_review.md  data_viz_hidden_gems.md  datadriveninnovation17.md  deep_work.md  design_web_api.md  explore-fast-mcp.md  festina-lente.md  fitness-functions-data-mesh.md  guest_at_podcast.md  hello.md  insights-from-data-science-milan-190516_01.md  insights-from-pydata-florence-16_01.md  insights_from_ieee_big_data_16.md  install-a-deb-file-from-terminal-on-ubuntu_01.md  knowledge-graph-step-by-step.md  migrated_to_pelican.md  new_project_atacmonitor.md  parallel-computing-in-python-with-concurrent-futures_01.md  parallel_with_futures.ipynb  parallel_with_futures.ipynb-meta  parallel_with_futures.nbdata  poli-big-data.md  py4ai.md  pycon_it_2022.md  pydata-milan-panel-2026.md  refactor_of_atacmonitor.md  (+12 more)
content/pages/: about.md  atacmonitor.md  bookshelf.md  fantacalla.md  training.md
(+7 files in other folders)
