[project]
name = "marco-santoni-blog"
version = "2.0.0"
description = "Generator of html static blog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.7.0",
    "blinker==1.9.0",
    "docutils==0.21.2",
    "feedgenerator==2.1.0",
    "idna==3.10",
    "jinja2==3.1.5",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ordered-set==4.1.0",
    "pelican==4.10.2",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "rich==13.9.4",
    "setuptools==75.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "unidecode==1.3.8",
    "watchfiles==1.0.3",
    "wheel==0.44.0",
]
